--- a/Modul 0 - Pengantar EDA.ipynb
+++ b/Modul 0 - Pengantar EDA.ipynb
@@ -59,7 +59,7 @@
     "- Koleksi atribut mendefinisikan suatu objek\n",
     "\n",
     "\n",
-    "<img src=\"pic1.jpg\" width=400 height=400 />\n"
+    "<center><img alt=\"\" src=\"images/pic1.jpg\" style=\"height: 300px;\" /></center>
    ]
   },
   {
@@ -150,7 +150,7 @@
     "- Asumikan kita memiliki data harga rumah yang ditawarkan dan variabel-variabel lainnya yang terkait.\n",
     "- Untuk membuat keputusan invetasi, kita akan melakukan EDA pada data yang ada.\n",
     "\n",
-    "<img src=\"pic2.jpg\" width=400 height=400 />\n"
+    "<center><img alt=\"\" src=\"images/pic2.jpg\" style=\"height: 300px;\" /></center>"
    ]
   },
   {
