Update Modul 0 - Pengantar EDA.ipynb

--- a/Modul 0 - Pengantar EDA.ipynb
+++ b/Modul 0 - Pengantar EDA.ipynb
@@ -59,7 +59,7 @@
     "- Koleksi atribut mendefinisikan suatu objek\n",
     "\n",
     "\n",
-    "<center><img alt=\"\" src=\"images/pic1.jpg\" style=\"height: 300px;\" /></center>
+    "<center><img alt=\"\" src=\"images/pic1.jpg\" style=\"height: 300px;\" /></center>"
    ]
   },
   {
