--- a/Modul 0 - Pengantar EDA.ipynb
+++ b/Modul 0 - Pengantar EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc1705c-ea67-4bf4-af89-08c706c5795e",
+   "id": "39b2f50f",
    "metadata": {},
    "source": [
     "### Outline:\n",
@@ -24,13 +24,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45fadbf-1511-4e43-83a9-75bb089089cc",
+   "id": "583d0173",
    "metadata": {},
    "source": [
     "### Pengantar\n",
     "- EDA merupakan syarat dasar bagi seluruh profesi (business intelligence, data analyst, data science, dlsb) yang terkait dengan pengolahan data. EDA merupakan tahapan awal dari kebanyakan proses analisis data dan menjadi suatu tahapan penting yang menentukan seberapa baik analisis data selanjutnya akan dihasilkan.\n",
     "- EDA diperkenalkan John Tukey 1961: *Procedure for analyzing data, techniques for interpreting the results of such procedures, ways of planning of data to make its analysis easier, more precise or more accurate, and all the machinery and results of (mathematical) statistics which apply to analyzing data*.\n",
-    "- Komponen EDA: preprocessing, perhitungan statistika dasar, visualisasi, penyusunan hipotesis (dugaan awal), pemeriksaan asumsi, penanganan missing value dan outlier, reduksi dimensi, pengelompokan, transformasi, dan distribusi data. \n"
+    "- Komponen EDA: preprocessing, perhitungan statistika dasar, visualisasi, penyusunan hipotesis (dugaan awal), pemeriksaan asumsi, penanganan missing value dan outlier, reduksi dimensi, pengelompokan, transformasi, dan distribusi data.\n",
+    "- Tools: Python (pandas), R, S-Plus, dll\n",
+    "    \n"
    ]
   },
   {
@@ -47,7 +49,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c1f6e1-09e1-4fc5-9b0f-3ce3e6360c2e",
+   "id": "a2e4f742",
+   "metadata": {},
+   "source": [
+    "### Bagian Utama Eksplorasi\n",
+    "\n",
+    "- Preprocessing\n",
+    "- Visualisasi\n",
+    "- Statistika dasar \n",
+    "- Clustering\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "356754ee",
+   "metadata": {},
+   "source": [
+    "##  \"Business & Data Understanding\"\n",
+    "\n",
+    "Tahap utama dalam EDA adalah **business & data understanding**. Dilakukan sebelum Data Preprocessing/Preparation.\n",
+    "\n",
+    "- Apa tujuan Machine Learning/AI kita?\n",
+    "- Data apa yang tersedia?\n",
+    "- Seberapa banyak (dan lama) data tersedia?\n",
+    "- Ada yang memiliki label? (Variabel Target)\n",
+    "- Apakah data ini relevan? Atau bisa dibuat relevan?\n",
+    "- Bagaimana dengan kualitas data ini?\n",
+    "- Ada data tambahan (eksternal)?\n",
+    "- Siapa yang memahami tentang data ini dengan baik di perusahaan?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d85bd0e",
    "metadata": {},
    "source": [
     "### Data(set)\n",
@@ -59,37 +93,7 @@
     "- Koleksi atribut mendefinisikan suatu objek\n",
     "\n",
     "\n",
-    "<center><img alt=\"\" src=\"images/pic1.jpg\" style=\"height: 300px;\" /></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f2dde984-5a3b-4e5d-945d-e4576b023e36",
-   "metadata": {},
-   "source": [
-    "### Bagian utama explorasi\n",
-    "\n",
-    "- Preprocessing\n",
-    "- Visualisasi\n",
-    "- Statistika das \n",
-    "- \n",
-    "Clustering\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2fde5425-75c6-437f-9dd1-f4e4d404f29a",
-   "metadata": {},
-   "source": [
-    "### Data Understanding\n",
-    "\n",
-    "- Data yang tersedia apa saja?\n",
-    "- Seberapa banyak (dan lama) data tersedia?\n",
-    "- Apakah ada data tambahan (eksternal)? Bmkg, bps, media sosial selain Perusahaan\n",
-    "- Ada yang memiliki label? (variabrl target)\n",
-    "- Apakah data ini relevan? Atau bisa dibuat relevan?\n",
-    "- Bagaimana dengan kualitas data ini?\n",
-    "- Siapa yang memahami tentang data ini dengan baik di Perusahaan?\n"
+    "<img src=\"pic1.jpg\" width=400 height=400 />\n"
    ]
   },
   {
@@ -150,7 +154,7 @@
     "- Asumikan kita memiliki data harga rumah yang ditawarkan dan variabel-variabel lainnya yang terkait.\n",
     "- Untuk membuat keputusan invetasi, kita akan melakukan EDA pada data yang ada.\n",
     "\n",
-    "<center><img alt=\"\" src=\"images/pic2.jpg\" style=\"height: 300px;\" /></center>"
+    "<img src=\"pic2.jpg\" width=400 height=400 />\n"
    ]
   },
   {
